[package]
name = "rcheat"
version = "0.1.2"
edition = "2021"
authors = ["handy-sun <handy-sun@foxmail.com>"]
homepage = "https://github.com/handy-sun/rcheat"
repository = "https://github.com/handy-sun/rcheat"
description = "Get/modify variable's value in another Linux running process"
license = "MIT"
readme = "README.md"
keywords = ["ptrace", "elf"]
build = "build.rs"
exclude = [
    ".githooks/*",
    ".github/**/*",
    ".gitignore",
]

[[bin]]
name = "rcheat"
path = "src/main.rs"

[dependencies]
anyhow = "^1.0"
bytes = "^1.7"
goblin = "0.8.0"
symbolic-common = "12.11.0"
ansi_term = "0.12.1"
once_cell = "1.19.0"

[dependencies.regex]
version = "1.10.4"
default-features = false
features = [
    "std",
    "unicode-perl"
]

[dependencies.clap]
version = "4.5.0"
default-features = false
features = [
    "std",
    "derive",
    "help",
    "usage",
]

[dependencies.shadow-rs]
version = "^0.35"
default-features = false
features = ["tzdb"]

[dependencies.symbolic-demangle]
version = "12.11.0"
default-features = false
features = [
    "cpp",
    "rust",
]

[dependencies.gimli]
version = "0.31.0"
features = [
    "read"
]

[dependencies.object]
version = "0.36.0"
features = [
    "wasm",
    "write"
]

[target.'cfg(unix)'.dependencies.nix]
version = "0.29.0"
default-features = false
features = [
    "ptrace",
    "fs",
]

## build-dependencies
[build-dependencies.shadow-rs]
version = "^0.35"
default-features = false
features = ["tzdb"]
