[package]
name = "rcheat"
version = "0.1.3"
edition = "2021"
authors = ["handy-sun <handy-sun@foxmail.com>"]
homepage = "https://github.com/handy-sun/rcheat"
repository = "https://github.com/handy-sun/rcheat"
description = "Get/modify variable's value in another Linux running process"
license = "MIT"
readme = "README.md"
keywords = ["ptrace", "elf", "cli", "process", "gdb"]
categories = ["command-line-utilities"]
build = "build.rs"
exclude = [
    ".githooks/*",
    ".github/**/*",
    ".gitignore",
]

[[bin]]
name = "rcheat"
path = "src/main.rs"

[dependencies]
anyhow = "^1.0"
bytes = "^1.7"
goblin = "0.8.0"
symbolic-common = "12.11.0"
ansi_term = "0.12.1"
once_cell = "1.19.0"
walkdir = "2.5.0"
symbolic-demangle = { version = "12.11.0", default-features = false, features = ["cpp", "rust"] }
regex = { version = "^1.10", default-features = false, features = ["std", "unicode-perl"]}
clap = { version = "^4.5", default-features = false, features = ["std", "derive", "help", "usage"] }
gimli = { version = "^0.31", features = ["read"] }
object = { version = "^0.36", features = ["read"] }
shadow-rs = { version = "^0.35", default-features = false, features = ["tzdb"] }
mlua = { version = "0.10.0-rc.1", features = ["lua54", "vendored"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", default-features = false, features = ["ptrace", "fs"] }

[build-dependencies]
shadow-rs = { version = "^0.35", default-features = false, features = ["tzdb"] }

[package.metadata.generate-rpm]
assets = [
    { source = "target/x86_64-unknown-linux-musl/release/rcheat", dest = "/usr/bin/rcheat", mode = "755" },
    { source = "README.md", dest = "/usr/share/rcheat/doc/README.md", mode = "644" },
]
