[package]
name = "rcheat"
version = "0.2.0"
edition = "2021"
authors = ["handy-sun <handy-sun@foxmail.com>"]
homepage = "https://github.com/handy-sun/rcheat"
repository = "https://github.com/handy-sun/rcheat"
description = "Get/modify variable's value in another Linux running process"
license = "MIT"
readme = "README.md"
keywords = ["ptrace", "elf", "cli", "process", "gdb"]
categories = ["command-line-utilities"]
build = "build.rs"
exclude = [
    ".githooks/*",
    ".github/**/*",
    ".gitignore",
]

[[bin]]
name = "rcheat"
path = "src/main.rs"

[dependencies]
anyhow = "^1.0"
bytes = "^1.11"
goblin = "^0.10"
symbolic-common = "^12"
owo-colors = "^4.3"
once_cell = "^1.21"
walkdir = "2.5.0"
symbolic-demangle = { version = "^12", default-features = false, features = ["cpp", "rust"] }
regex = { version = "^1.12", default-features = false, features = ["std", "unicode-perl"] }
clap = { version = "^4.6", default-features = false, features = ["std", "derive", "help", "usage"] }
gimli = { version = "^0.31", features = ["read"] }
object = { version = "^0.36", features = ["read"] }
mlua = { version = "^0.11", features = ["lua54", "vendored"] }
tabled = { version = "^0.20", features = ["ansi"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "^0.31", default-features = false, features = ["ptrace", "fs"] }

[package.metadata.generate-rpm]
assets = [
    { source = "target/x86_64-unknown-linux-musl/release/rcheat", dest = "/usr/bin/rcheat", mode = "755" },
    { source = "README.md", dest = "/usr/share/rcheat/doc/README.md", mode = "644" },
]

[package.metadata.deb]
license-file = ["LICENSE", "4"]
extended-description = """\
A simple command to trace another process\
(This program must be run with root privileges)."""
depends = "$auto"
